Alterações do texto

--- a/templates/desenvolvimento_web.html
+++ b/templates/desenvolvimento_web.html
@@ -37,7 +37,7 @@
 						<div class="col-lg-6">
 							<div class="badge rounded-pill badge-default">Desenvolvimento</div>
 							<h2 class="display-4 fw-bold">Criação de Website.</h2>
-							<p>Desenvolvemos um site de rápido carregamento e com design intuitivo, visando a melhor experiência para o usuário, porque entendemos que isso é um fator extremamente relevante na jornada de compra do cliente.</p>
+							<p>Desenvolvemos um site de rápido carregamento e com design intuitivo, visando a melhor experiência para o usuário.</p>
 							<a href="{% url 'sobre' %}" class="button button-rounded button-large nott ls0">Saiba Mais</a>
 							<a href="{% url 'contato' %}" class="button button-rounded button-large button-light text-dark bg-white border nott ls0">Entre em Contato</a>
 						</div>
