--- a/templates/google_meunegocio.html
+++ b/templates/google_meunegocio.html
@@ -37,7 +37,7 @@
 						<div class="col-lg-6">
 							<div class="badge rounded-pill badge-default">Google Meu Negócio</div>
 							<h2 class="display-4 fw-bold">Google Meu Negócio.</h2>
-							<p>Configuramos o Google Meu Negócio da sua agência para que ela seja encontrada mais facilmente por potenciais clientes.</p>
+							<p>Configuramos o Google Meu Negócio do seu negócio para que ele seja encontrado mais facilmente na rede de pesquisa.</p>
 							<a href="{% url 'sobre' %}" class="button button-rounded button-large nott ls0">Saiba Mais</a>
 							<a href="{% url 'contato' %}" class="button button-rounded button-large button-light text-dark bg-white border nott ls0">Entre em Contato</a>
 						</div>
