--- a/templates/identidade_visual.html
+++ b/templates/identidade_visual.html
@@ -37,7 +37,7 @@
 						<div class="col-lg-6">
 							<div class="badge rounded-pill badge-default">Serviços</div>
 							<h2 class="display-4 fw-bold">Identidade Visual & Logomarca</h2>
-							<p>Criamos do zero uma identidade visual que converse com toda a estrutura digital da sua agência.</p>
+							<p>Criamos uma identidade visual que converse com a essência do seu negócio.</p>
 							<a href="{% url 'sobre' %}" class="button button-rounded button-large nott ls0">Saiba Mais</a>
 							<a href="{% url 'contato' %}" class="button button-rounded button-large button-light text-dark bg-white border nott ls0">Entre em Contato</a>
 						</div>
