--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
 						<div class="heading-block border-bottom-0 center mx-auto mb-0" style="max-width: 550px">
 							<div class="badge rounded-pill badge-default">Serviços</div>
 							<h3 class="nott ls0 mb-3">O Que Fazemos</h3>
-							<p>Construímos uma estrutura digital inteligente para a sua agência de turismo.</p>
+							<p>Construímos uma estrutura digital inteligente para a seu negócio de turismo.</p>
 						</div>
 						<div class="row justify-content-between align-items-center">
 
@@ -106,7 +106,7 @@
 									</div>
 									<div class="fbox-content">
 										<h3 class="nott ls0">Google Meu Negócio</h3>
-										<p>Configuração inteligente para trazer mais clientes para a sua agência</p>
+										<p>Configuração inteligente para trazer mais clientes para o seu negócio</p>
 									</div>
 								</div>
 
@@ -272,7 +272,7 @@
 									</div>
 									<div class="fbox-content">
 										<h3 class="nott ls0">1. Planejamento &amp; Pesquisa</h3>
-										<p>Entendimento sobre as necessidades exatas da sua agência de turismo e elaboração de uma estratégia aplicável.</p>
+										<p>Entendimento das metas e necessidades do seu negócio e elaboração de estratégias.</p>
 									</div>
 								</div>
 							</div>
@@ -284,7 +284,7 @@
 									</div>
 									<div class="fbox-content">
 										<h3 class="nott ls0">2. Implementação</h3>
-										<p>Colocar em prática as soluções digitais propostas especialmente para sua empresa.</p>
+										<p>Colocar em prática as soluções digitais propostas especialmente para seu negócio.</p>
 									</div>
 								</div>
 							</div>
@@ -547,7 +547,7 @@
 											A Simpli é uma agência de Marketing Digital?
 										</div>
 									</div>
-									<div class="toggle-content ps-4">Não. Nós somos uma empresa de soluções digitais para agências de turismo. Isso porque a Simpli Global está comprometida não apenas em entregar o melhor serviço para os nossos clientes, mas também em ver os resultados de vendas sendo colhidos pelas agências de turismo parceiras.</div>
+									<div class="toggle-content ps-4">Somos uma empresa de soluções digitais para negócios de turismo. Nós estamos comprometidos não apenas em entregar o melhor serviço para nossos clientes, mas em ver os resultados sendo colhidos por eles.</div>
 								</div>
 
 								<div class="toggle">
@@ -573,7 +573,7 @@
 											Por que investir agora?
 										</div>
 									</div>
-									<div class="toggle-content ps-4">O tráfego pago apenas potencializa aquilo que sua empresa já faz de melhor. Se você acredita no que sua agência de turismo vende, o tráfego pago tem potencial para ser o combustível e alavancar de forma mais rápida as vendas e fechamentos de pacotes da sua agência de turismo.</div>
+									<div class="toggle-content ps-4">O tráfego pago e os anúncios online têm o poder de potencializar o que seu negócio já faz e oferece. São combustíveis muito potentes para alavancar seu negócio.</div>
 								</div>
 
 								<div class="toggle">
@@ -586,7 +586,7 @@
 											O que é tráfego pago?
 										</div>
 									</div>
-									<div class="toggle-content ps-4">Tráfego por si só é um fluxo de pessoas. O tráfego pago é o fluxo de pessoas que chegam até você por meio de mídias pagas (as plataformas mais conhecidas são facebook, instagram, google e youtube). Os anúncios presentes nessas plataformas faz com que haja uma quantidade de pessoas sendo redirecionadas para sites e páginas por meio de promoções pagas.</div>
+									<div class="toggle-content ps-4">Tráfego por si só é um fluxo de pessoas. O tráfego pago é o fluxo de pessoas que chegam até você por meio de mídias pagas (as plataformas mais conhecidas são facebook, instagram, google e youtube). Os anúncios presentes nestas plataformas fazem com que pessoas certas conheçam seu negócio e sejam direcionadas para seu site.</div>
 								</div>
 
 								<div class="toggle">
@@ -599,7 +599,7 @@
 											Quanto tempo leva para ter resultados?
 										</div>
 									</div>
-									<div class="toggle-content ps-4">Como os anúncios feitos nas plataformas online não são uma ciência exata, não existe uma resposta que se aplica para toas as agências de turismo. Porém, existem processos e testes para que seja possível começar a mensurar com mais precisão os resultados obtidos por meio das campanhas pagas.</div>
+									<div class="toggle-content ps-4">Como os anúncios feitos nas plataformas online não são uma ciência exata, não existe uma resposta que se aplica para todos os negócios. Com um tráfego muito bem feito, é possível acompanhar as melhorias do fluxo de pessoas conhecendo e chegando até seu negócio.</div>
 								</div>
 
 								<div class="toggle">
@@ -612,7 +612,7 @@
 											Devo investir no Google ou no Facebook?
 										</div>
 									</div>
-									<div class="toggle-content ps-4">Sem antes realizar testes, é impossível afirmar qual seria a rede de tráfego que traria mais retorno à sua agência. Essa não é uma questão de "ou um ou outro", mas sim de saber como realocar melhor os orçamentos para cada plataforma de acordo com os números colhidos e métricas analisadas.</div>
+									<div class="toggle-content ps-4">Sem antes realizar testes, é impossível afirmar qual seria a rede de tráfego que traria mais retorno ao seu negócio. Essa não é uma questão de "ou um ou outro", mas sim de saber como alocar melhor os orçamentos para cada plataforma de acordo com os números colhidos e métricas analisadas.</div>
 								</div>
 							</div>
 
