--- a/templates/otimizacao_seo.html
+++ b/templates/otimizacao_seo.html
@@ -36,9 +36,9 @@
 					<div class="row align-items-center">
 						<div class="col-lg-6">
 							<div class="badge rounded-pill badge-default">SEO</div>
-							<h2 class="display-4 fw-bold">Otimização de SEO.</h2>
+							<h2 class="display-4 fw-bold">SEO.</h2>
 							<p>É o que dizem: a segunda página do Google nem existe.</p>
-							<p>E para evitar isso, fazemos com que o site da sua agência apareça nos primeiros rankings de pesquisa do Google.</p>
+							<p>E para evitar isso, fazemos com que o site do seu negócio apareça nos primeiros rankings de pesquisa do Google.</p>
 							<a href="#" class="button button-rounded button-large nott ls0">Saiba Mais</a>
 							<a href="{% url 'contato' %}" class="button button-rounded button-large button-light text-dark bg-white border nott ls0">Entre em Contato</a>
 						</div>
