--- a/templates/partials/menu.html
+++ b/templates/partials/menu.html
@@ -118,7 +118,7 @@
 														</div>
 														<div class="fbox-content">
 															<h3 class="nott ls0">Gestão de Tráfego</h3>
-															<p>Trazemos os clientes mais qualificados para a sua agência</p>
+															<p>Aumento do fluxo de pessoas para o seu negócio</p>
 														</div>
 													</div>
 												</a>
@@ -129,7 +129,7 @@
 														</div>
 														<div class="fbox-content">
 															<h3 class="nott ls0">SEO</h3>
-															<p>Fazemos seu site ter mais relevância na página de pesquisa do Google</p>
+															<p>Maior relevância e rankeamento do seu site no Google</p>
 														</div>
 													</div>
 												</a>
@@ -140,7 +140,7 @@
 														</div>
 														<div class="fbox-content">
 															<h3 class="nott ls0">Criação de Website</h3>
-															<p>Desenvolvemos utiliando as melhores ferramentas um site moderno e otimizado para responder bem em todos os dispositivos</p>
+															<p>Sites modernos e responsivos para seu negócio</p>
 														</div>
 													</div>
 												</a>
@@ -151,7 +151,7 @@
 														</div>
 														<div class="fbox-content">
 															<h3 class="nott ls0">Google Meu Negócio</h3>
-															<p>Configuramos o Google Meu Negócio da sua agência para que ela seja encontrada mais facilmente por potenciais clientes															</p>
+															<p>Configuração do Google Meu Negócio para que sua empresa se destaque em meio aos concorrentes															</p>
 														</div>
 													</div>
 												</a>
@@ -162,7 +162,7 @@
 														</div>
 														<div class="fbox-content">
 															<h3 class="nott ls0">Identidade Visual & Logomarca</h3>
-															<p>Entregamos uma identidade visual que condiga com os serviços prestados pela sua agência</p>
+															<p>Criação de identidade visual pensada na essência do seu negócio</p>
 														</div>
 													</div>
 												</a>
