--- a/templates/partials/mini-contato.html
+++ b/templates/partials/mini-contato.html
@@ -10,7 +10,7 @@
 									<div class="badge rounded-pill badge-default">Contato</div>
 									<h3 class="nott ls0">Converse com a Simpli</h3>
 								</div>
-								<p>Solicite uma análise 100% gratuita do cenário da sua empresa.</p>
+								<p>Solicite uma análise 100% gratuita do cenário da seu negócio.</p>
 							</div>
 
 							<div class="col-lg-3 col-md-4">
