--- a/templates/partials/servicos-outros.html
+++ b/templates/partials/servicos-outros.html
@@ -42,7 +42,7 @@
 											</div>
 											<div class="fbox-content">
 												<h3 class="nott ls0 text-larger">Gestão de Tráfego</h3>
-												<p class="text-smaller">Trazemos os clientes mais qualificados para a sua agência</p>
+												<p class="text-smaller">Aumento do fluxo de pessoas para o seu negócio</p>
 											</div>
 											<ul class="iconlist ms-3 mt-4 mb-0">
 												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Facebook Ads</li>
@@ -62,8 +62,8 @@
 												<img src="{% static 'demos/seo/images/icons/analysis.svg' %}" alt="Feature Icon" class="bg-transparent rounded-0">
 											</div>
 											<div class="fbox-content">
-												<h3 class="nott ls0 text-larger">Otimização de SEO</h3>
-												<p class="text-smaller">Fazemos seu site ter mais relevância na página de pesquisa do Google</p>
+												<h3 class="nott ls0 text-larger">SEO</h3>
+												<p class="text-smaller">Maior relevância e rankeamento do seu site no Google</p>
 											</div>
 											<ul class="iconlist ms-3 mt-4 mb-0">
 												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Tráfego por pesquisa</li>
@@ -107,12 +107,12 @@
 											</div>
 											<div class="fbox-content">
 												<h3 class="nott ls0 text-larger">Criação de Website</h3>
-												<p class="text-smaller">Desenvolvemos utiliando as melhores ferramentas um site moderno e otimizado para responder bem em todos os dispositivos</p>
+												<p class="text-smaller">Sites modernos e responsivos para seu negócio</p>
 											</div>
 											<ul class="iconlist ms-3 mt-4 mb-0">
 												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Sites institucionais</li>
 												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Sistemas WEB</li>
-												<li class="text-muted"><i class="icon-check text-smaller color"></i> Lead pages</li>
+												<li class="text-muted"><i class="icon-check text-smaller color"></i> Landing Pages</li>
 											</ul>
 										</div>
 									</div>
@@ -128,7 +128,7 @@
 											</div>
 											<div class="fbox-content">
 												<h3 class="nott ls0 text-larger">Google Meu Negócio</h3>
-												<p class="text-smaller">Configuramos o Google Meu Negócio da sua agência para que ela seja encontrada mais facilmente por potenciais clientes</p>
+												<p class="text-smaller">Configuração do Google Meu Negócio para que sua empresa se destaque em meio aos concorrentes</p>
 											</div>
 											<ul class="iconlist ms-3 mt-4 mb-0">
 												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Presença online</li>
@@ -149,7 +149,7 @@
 											</div>
 											<div class="fbox-content">
 												<h3 class="nott ls0 text-larger">Identidade Visual & Logomarca</h3>
-												<p class="text-smaller">Entregamos uma identidade visual que condiga com os serviços prestados pela sua agência</p>
+												<p class="text-smaller">Criação de identidade visual pensada na essência do seu negócio</p>
 											</div>
 											<ul class="iconlist ms-3 mt-4 mb-0">
 												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Marca nova</li>
