--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -38,15 +38,15 @@
 									<div class="badge rounded-pill badge-default">Quem somos</div>
 									<h3 class="nott ls0 mb-3">Prazer, somos a Simpli Global</h3>
 								</div>
-							</div>
-							<div class="col-md-6">
-								<div class="heading-block border-bottom-0 mb-0">
-									<p>Uma empresa que tem como objetivo, desde o dia 0 de sua concepção, trazer resultados tangíveis para nossos clientes do setor de Turismo e Intercâmbio por meio de estratégias e soluções de marketing digital.</p>
+								<div class="col-md-10 offset-md-1">
+									<div class="heading-block border-bottom-0 mb-0">
+										<p>Somos uma empresa que tem como objetivo principal melhorar a presença digital de nossos clientes. Entendemos que hoje em dia é indispensável, para negócios se manterem sustentáveis, ter uma presença digital muito bem clara e estruturada.</p>
+									</div>
 								</div>
-							</div>
-							<div class="col-md-6">
-								<div class="heading-block border-bottom-0 mb-0">
-									<p>Percebendo que no mercado do marketing digital há um déficit muito grande de profissionais qualificados e agências que prestam um serviço sério e profissional, decidimos unir habilidades e fundar a Simpli Global.</p>
+								<div class="col-md-10 offset-md-1">
+									<div class="heading-block border-bottom-0 mb-0">
+										<p>E com esse intuito de ajudar negócios de turismo, a Simpli nasceu.</p>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -66,11 +66,11 @@
 
 						<div class="row">
 							<div class="col-lg-6">
-								<p>Entendemos a importância de se ter uma comunicação clara e transparente, e prezamos muito por isso com a seleção de nossos clientes também. Gostamos de trabalhar com clientes que tenham objetivos claros de crescimento.</p>
+								<p>Entendemos a importância de se ter uma comunicação clara e transparente, e prezamos muito por isso com a seleção de nossos clientes também. Gostamos de trabalhar com clientes que tenham objetivos de crescimento.</p>
 							</div>
 	
 							<div class="col-lg-6">
-								<p class="mb-3">Selecionamos muito bem as empresas com quem vamos trabalhar.</p>
+								<p class="mb-3">Selecionamos muito bem os negócios com quem vamos trabalhar.</p>
 								<p>Acreditamos muito no potencial de crescimento que existe em um trabalho bem feito. Esse é o nosso combustível.</p>
 							</div>
 						</div>
@@ -154,8 +154,7 @@
 									<h4>Nosso <span>Objetivo</span>.</h4>
 								</div>
 	
-								<p class="mb-2">Prestar consultoria estratégica de Marketing para empresas de turismo e intercâmbio, com foco em aumentar leads qualificados e, desta maneira, auxiliar no crescimento destas agências.</p>
-								<p>Prestamos serviços tradicionais de marketing, mas entendemos que apenas isto não é suficiente para trazer resultados para nossos clientes.</p>
+								<p class="mb-2">Ajudar negócios de turismo a melhorar seus resultados e atingir suas metas utilizando recursos do meio digital, como Google e Facebook, de forma estratégica para fazer com que mais pessoas conheçam seu negócio.</p>
 							</div>
 	
 							<div class="col-lg-4">
@@ -164,8 +163,7 @@
 									<h4>Nossa <span>Visão</span>.</h4>
 								</div>
 	
-								<p class="mb-2">Tendo em vista este déficit no mercado, decidimos nos especializar no setor de agências de turismo e agências de intercâmbio.</p>
-								<p>Com o entendimento de diversas áreas dentro do marketing digital, notamos que não basta apenas estar em uma plataforma ou rede social, mas sim se utilizar do potencial que todas estas ferramentas combinadas podem trazer de benefícios para nossos clientes.</p>
+								<p class="mb-2">Tendo em vista a revolução digital que estamos presenciando, é impossível se posicionar hoje em dia ignorando a presença digital do seu negócio. Pensando nisso, a Simpli ajuda a alavancar negócios de turismo por meio de anúncios online, SEO, criação de Websites, etc.</p>
 	
 							</div>
 	
@@ -175,8 +173,7 @@
 									<h4>Como <span>Fazemos</span>.</h4>
 								</div>
 	
-								<p class="mb-2">Nós oferecemos um acompanhamento estratégico junto aos nossos clientes, para encontrar as melhores soluções para cada caso específico.</p>
-								<p>Não utilizamos métodos prontos, pois entendemos que cada agência tem suas demandas particulares. Elaboramos planos de ação específicos e direcionados especialmente para cada caso.</p>
+								<p class="mb-2">Nós oferecemos um acompanhamento estratégico junto aos nossos clientes para encontrar as melhores soluções para cada caso específico. Não utilizamos métodos prontos, pois entendemos que cada negócio tem suas demandas particulares. Elaboramos planos de ação específicos e direcionados especialmente para cada caso.</p>
 							</div>
 	
 						</div>
@@ -222,7 +219,7 @@
 											</div>
 											<div class="fbox-content">
 												<h3 class="nott ls0 text-larger">Gestão de Tráfego</h3>
-												<p class="text-smaller">Trazemos os clientes mais qualificados para a sua agência.</p>
+												<p class="text-smaller">Aumento do fluxo de pessoas para o seu negócio.</p>
 											</div>
 											<ul class="iconlist ms-3 mt-4 mb-0">
 												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Facebook Ads</li>
@@ -242,8 +239,8 @@
 												<img height="150" src="{% static 'demos/seo/images/services/seo-pb.svg' %}" alt="Feature Icon">
 											</div>
 											<div class="fbox-content">
-												<h3 class="nott ls0 text-larger">Otimização de SEO</h3>
-												<p class="text-smaller">Fazemos seu site ter mais relevância na página de pesquisa do Google.</p>
+												<h3 class="nott ls0 text-larger">SEO</h3>
+												<p class="text-smaller">Maior relevância e rankeamento do seu site no Google.</p>
 											</div>
 											<ul class="iconlist ms-3 mt-4 mb-0">
 												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Tráfego por pesquisa</li>
@@ -285,12 +282,12 @@
 											</div>
 											<div class="fbox-content">
 												<h3 class="nott ls0 text-larger">Criação de Website</h3>
-												<p class="text-smaller">Desenvolvemos utiliando as melhores ferramentas um site moderno e otimizado para responder bem em todos os dispositivos.</p>
+												<p class="text-smaller">Sites modernos e responsivos para seu negócio.</p>
 											</div>
 											<ul class="iconlist ms-3 mt-4 mb-0">
 												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Sites institucionais</li>
 												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Sistemas WEB</li>
-												<li class="text-muted"><i class="icon-check text-smaller color"></i> Lead pages</li>
+												<li class="text-muted"><i class="icon-check text-smaller color"></i> Landing Pages</li>
 											</ul>
 										</div>
 									</div>
@@ -306,7 +303,7 @@
 											</div>
 											<div class="fbox-content">
 												<h3 class="nott ls0 text-larger">Google Meu Negócio</h3>
-												<p class="text-smaller">Configuramos o Google Meu Negócio da sua agência para que ela seja encontrada mais facilmente por potenciais clientes.</p>
+												<p class="text-smaller">Configuração do Google Meu Negócio para que sua empresa se destaque em meio aos concorrentes.</p>
 											</div>
 											<ul class="iconlist ms-3 mt-4 mb-0">
 												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Presença online</li>
@@ -327,7 +324,7 @@
 											</div>
 											<div class="fbox-content">
 												<h3 class="nott ls0 text-larger">Identidade Visual & Logomarca</h3>
-												<p class="text-smaller">Entregamos uma identidade visual que condiga com os serviços prestados pela sua agência.</p>
+												<p class="text-smaller">Criação de identidade visual pensada na essência do seu negócio.</p>
 											</div>
 											<ul class="iconlist ms-3 mt-4 mb-0">
 												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Marca nova</li>
