--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -14,7 +14,7 @@
 
 								<img src="{% static 'images/footer-widget-logo.png' %}" alt="Footer Logo" class="alignleft" style="margin-top: 8px; padding-right: 18px; border-right: 1px solid #DDD;">
 
-								<p class="pt-4"><strong>Soluções Digitais</strong> para agências de <strong>Turismo</strong> &amp; <strong>Intercâmbio</strong></p>
+								<p class="pt-4"><strong>Soluções Digitais</strong> para negócios de <strong>Turismo</strong></p>
 
 								<div class="line line-sm"></div>
 
